text align fix

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -408,7 +408,8 @@ footer .footer-below {
     min-height: 100%;
     border: 0;
     border-radius: 0;
-    text-align: justify;
+    /*text-align: justify;*/
+    text-align: left;
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
